Wed Mar  4 00:58:27 1998  Tom Tromey  <tromey@cygnus.com>

	* Makefile.am (libsupport_a_SOURCES): Added gnome-argp.c.
	* gnome-argp.c: New file.

	* argp-parse.c: Include gnome-argp.h.
	* argp-help.c: Include gnome-argp.h.

	* README-gnome, gnome-argp.h: New files.

	* argp-ba.c, argp-eexst.c, argp-fmtstream.c, argp-fmtstream.h,
	argp-fs-xinl.c, argp-help.c, argp-namefrob.h, argp-parse.c,
	argp-pv.c, argp-pvh.c, argp-test.c, argp-xinl.c, argp.h,
	strndup.c: New files, imported from glibc.  Please use "cvs
	import" if you import new versions.

	* Makefile.am (noinst_HEADERS): Added argp-fmtstream.h,
	argp-namefrob.h, argp.h, gnome-argp.h.
	(EXTRA_DIST): New macro.

1998-02-18  Raja R Harinath  <harinath@cs.umn.edu>

	* strcasecmp.c: New file, copied from `glibc'.  Used to provide
	replacement `strcasecmp' file.
	
